# arbot

./: .gitignore  ArbotController.h  ArbotPlatform.h  ArbotVMA03MDPlatform.h  ArbotVMA03Platform.h  Debug.h  EEPROMAnything.h  FreedomController.h  GeneticGenome.h  Genome.h  IArbotVMA03MDPlatform.h  IGenome.h  IrController.h  NeuralNetwork.h  Neuron.h  Population.h  README.md  arbot.ino  common.h  randomseed.h
arbot.xcodeproj/: project.pbxproj
sim/test/: 0  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  backprop.cpp  cmake_install.cmake  helloDemo  nn.cpp  tempData
sim/test/0.dSYM/Contents/Resources/DWARF/: 0
sim/test/a.out.dSYM/Contents/Resources/DWARF/: a.out
sim/test/xcode/: CMakeCache.txt  cmake_install.cmake
sim/test/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
sim/test/xcode/Debug/: helloDemo
sim/test/xcode/HELLO.build/Debug/ZERO_CHECK.build/: Script-95F0D1D2C27643429F296620.sh
sim/test/xcode/HELLO.build/Debug/helloDemo.build/: helloDemo.dep  helloDemo~.dep
sim/test/xcode/HELLO.xcodeproj/: project.pbxproj
sim/test/xcode/HELLO.xcodeproj/project.xcworkspace/xcshareddata/: HELLO.xccheckout
sim/test/xcode/HELLO.xcodeproj/project.xcworkspace/xcuserdata/jernej.xcuserdatad/: UserInterfaceState.xcuserstate
sim/test/xcode/HELLO.xcodeproj/xcuserdata/jernej.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
sim/test/xcode/HELLO.xcodeproj/xcuserdata/jernej.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  helloDemo.xcscheme  xcschememanagement.plist
(+35 files in other folders)
